tests/parser/should_fail/T12051.hs
module T12051 where

data T = (+++) Int
